--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+<!--下面是否添加的类,指的是当nav图标被点击时,是否添加那个类名(在index.less里)-->
+<div id="mainContent" ng-class="{navClickMainContent:isNav}">
+    <nav></nav>
 
-<nav></nav>
+    <div ng-show="title == '今日一刻'" ui-view="home"></div>
+    <div ng-show="title == '作者'" ui-view="author"></div>
+    <div ng-show="title == '栏目'" ui-view="content"></div>
+    <div ng-show="title == '我的'" ui-view="my"></div>
 
-<div ng-show="title == '今日一刻'" ui-view="home"></div>
-<div ng-show="title == '作者'" ui-view="author"></div>
-<div ng-show="title == '栏目'" ui-view="content"></div>
-<div ng-show="title == '我的'" ui-view="my"></div>
-
-<tabbar></tabbar>
+    <tabbar></tabbar>
+</div>
 
 </body>
 <script>
