--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="app" ng-controller="appController">
 <head>
     <meta charset="UTF-8">
+    <meta name="referrer" content="never">
     <title>一刻</title>
     <meta name="viewport" content="width=device-width maximum=1.0 minimum=1.0 user-scalable=no">
     <link rel="stylesheet" href="css/index.css">
