--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="referrer" content="never">
     <title>一刻</title>
-    <meta name="viewport" content="width=device-width maximum=1.0 minimum=1.0 user-scalable=no">
+    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 <div id="mainContent" ng-class="{navClickMainContent:isNav}">
     <!--<nav></nav>-->
 
-    <div ng-show="title == '今日一刻'" ui-view="home"></div>
+    <div ng-show="title == '今日一刻'" ui-view="home" ></div>
     <div ng-show="title == '作者'" ui-view="author"></div>
     <div ng-show="title == '栏目'" ui-view="content"></div>
     <div ng-show="title == '我的'" ui-view="my"></div>
@@ -22,10 +22,6 @@
 </div>
 
 </body>
-<script>
-    var font = window.screen.width/10 + 'px';
-    document.getElementsByTagName('html')[0].style.fontSize = font;
-</script>
 <script src="lib/angular.min.js"></script>
 <script src="lib/angular-ui-router.min.js"></script>
 <script src="js/index.js"></script>
