--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="app" ng-controller="appController">
+
+<html lang="en" ng-app="app" ng-controller="appController" ng-class="{noscroll:isNav}">
 <head>
     <meta charset="UTF-8">
     <meta name="referrer" content="never">
@@ -7,19 +8,16 @@
     <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
     <link rel="stylesheet" href="css/index.css">
 </head>
-<body>
+<body  ng-class="{noscroll:isNav}" >
 <!--下面是否添加的类,指的是当nav图标被点击时,是否添加那个类名(在index.less里)-->
 <div id="mainContent" ng-class="{navClickMainContent:isNav}">
-    <!--<nav></nav>-->
     <div  ng-show="title == '今日一刻'"  ui-view="home"></div>
     <div  ng-show="title == '往期内容'"  ui-view="past"></div>
     <div  ng-show="title == '热门作者'"  ui-view="author"></div>
     <div  ng-show="title == '栏目浏览'"  ui-view="content"></div>
     <div  ng-show="title == '我喜欢的'"  ui-view="my"></div>
-
-
-    <tabbar></tabbar>
 </div>
+<tabbar></tabbar>
 
 </body>
 <script src="lib/angular.min.js"></script>
