--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,17 @@
     <meta name="referrer" content="never">
     <title>一刻</title>
     <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
+
 </head>
-<body  ng-class="{noscroll:isNav}" >
+<body  ng-class="{noscroll:isNav}" style= "overflow-x:hidden">
 <!--下面是否添加的类,指的是当nav图标被点击时,是否添加那个类名(在index.less里)-->
+<nav></nav>
 <div id="mainContent" ng-class="{navClickMainContent:isNav}">
     <div  ng-show="title == '今日一刻'"  ui-view="home"></div>
     <div  ng-show="title == '往期内容'"  ui-view="past"></div>
-    <div  ng-show="title == '热门作者'"  ui-view="author"></div>
+    <div  ng-show="title == '热门作者' || title.indexOf('的') != -1"  ui-view="author"></div>
     <div  ng-show="title == '栏目浏览'"  ui-view="content"></div>
     <div  ng-show="title == '我喜欢的'"  ui-view="my"></div>
 </div>
