登录一级页面完成,包含动画效果以及输入框交互

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     <div  ng-show="title == '我喜欢的'"  ui-view="my"></div>
 </div>
 <tabbar></tabbar>
+<login ng-class="{loginHidden:loginIn}"></login>
 
 </body>
 <script src="lib/angular.min.js"></script>
