--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 
-<html lang="en" ng-app="app" ng-controller="appController" ng-class="{noscroll:isNav}">
+<html lang="en" ng-app="app"
+      ng-controller="appController"
+      ng-class="{noscroll:(isNav||loginIn)}">
 <head>
     <meta charset="UTF-8">
     <meta name="referrer" content="never">
@@ -9,19 +11,20 @@
     <link rel="stylesheet" href="css/index.css">
 
 </head>
-<body  ng-class="{noscroll:isNav}" style= "overflow-x:hidden;" ng-swipe-left="swipeLeft()">
+<body ng-class="{noscroll:(isNav||loginIn)}"
+      style= "overflow-x:hidden;"
+      ng-swipe-left="swipeLeft()">
 <!--下面是否添加的类,指的是当nav图标被点击时,是否添加那个类名(在index.less里)-->
 <nav></nav>
 <div id="mainContent" ng-swipe-right="swipeRight()">
-    <div ng-controller="homeController" ng-show="title == '今日一刻'"  ui-view="home"></div>
-    <div ng-controller="pastController"
-         ng-show="title == '往期内容'"
+    <div ng-show="title == '今日一刻'"  ui-view="home"></div>
+    <div ng-show="title == '往期内容'"
          ui-view="past"
          infinite-scroll='scrollaa()'
          infinite-scroll-distance='0'
          infinite-scroll-immediate-check= 'false'
     ></div>
-    <div  ng-show="title == '热门作者' || title.indexOf('的') != -1"  ui-view="author"></div>
+    <div  ng-show="title == '热门作者' || title.indexOf('主页') != -1"  ui-view="author"></div>
     <div  ng-show="title == '栏目浏览'"  ui-view="content"></div>
     <div  ng-show="title == '我喜欢的'"  ui-view="my"></div>
 </div>
