图片懒加载已完成

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body ng-class="{noscroll:(isNav||loginIn)}"
-      style= "overflow-x:hidden;"
+
       ng-swipe-left="swipeLeft()">
 <!--下面是否添加的类,指的是当nav图标被点击时,是否添加那个类名(在index.less里)-->
 <nav></nav>
@@ -37,5 +37,6 @@
 <script src="lib/angular-ui-router.min.js"></script>
 <script src="lib/angular-touch.min.js"></script>
 <script src="lib/ng-infinite-scroll.min.js"></script>
+<script src="lib/angular-lazy-img.js"></script>
 <script src="js/index.js"></script>
 </html>
