--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,8 @@
     <title>一刻</title>
     <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
     <link rel="stylesheet" href="css/index.css">
-
 </head>
-<body ng-class="{noscroll:(isNav||loginIn)}"
-
-      ng-swipe-left="swipeLeft()">
+<body ng-class="{noscroll:(isNav||loginIn)}" ng-swipe-left="swipeLeft()">
 <!--下面是否添加的类,指的是当nav图标被点击时,是否添加那个类名(在index.less里)-->
 <nav></nav>
 <div id="mainContent" ng-swipe-right="swipeRight()">
