--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,16 @@
     <div ng-show="title == '今日一刻'"  ui-view="home"></div>
     <div ng-show="title == '往期内容'"
          ui-view="past"
-         infinite-scroll='scrollaa()'
+         infinite-scroll='pastMore()'
          infinite-scroll-distance='0'
          infinite-scroll-immediate-check= 'false'
     ></div>
-    <div  ng-show="title == '热门作者' || title.indexOf('主页') != -1"  ui-view="author"></div>
+    <div  ng-show="title == '热门作者' || title.indexOf('主页') != -1"
+          ui-view="author"
+          infinite-scroll='authorListMore()'
+          infinite-scroll-distance='0'
+          infinite-scroll-immediate-check= 'false'
+    ></div>
     <div  ng-show="title == '栏目浏览'"  ui-view="content"></div>
     <div  ng-show="title == '我喜欢的'"  ui-view="my"></div>
 </div>
