已完结,等待测试

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
           infinite-scroll-distance='0'
           infinite-scroll-immediate-check= 'false'
     ></div>
-    <div  ng-show="title == '栏目浏览'"  ui-view="content"></div>
+    <div  ng-show="title == '栏目浏览'"  ui-view="column"></div>
     <div  ng-show="title == '我喜欢的'"  ui-view="my"></div>
 </div>
 <tabbar></tabbar>
