删除点击事件300ms延时

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="images/todayicon.png">
     <link rel="stylesheet" href="css/index.css">
     <script src="lib/jquery.min.js" defer></script>
+    <script src="lib/fastclick.js" defer></script>
     <script src="lib/angular.min.js" defer></script>
     <script src="lib/angular-ui-router.min.js" defer></script>
     <script src="lib/angular-touch.min.js" defer></script>
